--- a/aula_04/aula_04.html
+++ b/aula_04/aula_04.html
@@ -19,7 +19,7 @@
         usuario q, por ter uma deficiencia visual, usa um leitor de tela.
     </p>
     <p>
-        Os headings (h1, h2, h3, ...), nao tegs de estruturação testual, na qual definem titulos
+        Os headings (h1, h2, h3, ...), sao tegs de estruturação testual, na qual definem titulos
         e subtitulos de um documento. Ele vai do h1 ate o h6.<br>
         EX:
     </p>
